--- a/PAC1/src/style.css
+++ b/PAC1/src/style.css
@@ -11,6 +11,8 @@
 html {
     height: 100%;
     scroll-behavior: smooth;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 /* --------------------------------------------------------- */
 /* ------roots--------------------------------------------- */
@@ -25,30 +27,32 @@ html {
 }
 
 /* ------------------------- */
-/* ---------header----------- */
+/* ---------menu----------- */
 /* ------------------------- */
-header {
+.menu {
     background-color: var(--wine-menu);
     width: 100%;
     display: flex;
-    justify-content: center;
-}
-
-/* ------------------------- */
-/* ---------nav----------- */
-/* ------------------------- */
-.menu {
-    width: 100%;
-    display: flex;
     flex-direction: column;
+    justify-content: center;
+    /*     flex-direction: row;
+    justify-content: space-between; */
     align-items: center;
     padding-block: 1em;
+    /*     position: sticky;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 999; */
 }
 
 /* logo */
 .logo-menu {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 100%;
 }
 
@@ -59,11 +63,12 @@ header {
 
 /* enllaços */
 .links-menu {
+    display: none;
+}
+
+/* .links-menu {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 1em;
-    padding-block: 1em;
     list-style: none;
 }
 
@@ -74,24 +79,88 @@ header {
 
 .links-menu a:hover {
     color: var(--negre);
-}
+} */
 
-/* hero-img */
-.hero-img {
-    position: relative;
+/* ------------------------- */
+/* -----principal-img------ */
+/* ----------------------- */
+.principal-img {
     background-image: url('/img/copa-vi-fons-vinya.jpg');
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    background-repeat: no-repeat;
+    color: var(--blanc);
+    height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: var(--blanc);
+    text-shadow: 5px 5px 5px black;
 }
 
-/* body */
-body {
-    background-color: var(--blanc);
+/* ------------------------- */
+/* ---------main----------- */
+/* ------------------------- */
+.contenidor {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.contenidor a {
+    color: var(--negre);
+    margin: 1.5em;
+    padding: 1em;
+    width: 85%;
+    box-shadow: 1px 1px 5px gray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+.contenidor div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contenidor img {
+    width: 100%;
+}
+
+/* ------------------------- */
+/* ---------footer----------- */
+/* ------------------------- */
+footer {
+    padding-block: 1em;
+}
+footer, footer div {
+    background-color: var(--wine-menu);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: .5em;
+/*     flex-direction: row;
+    align-items: center;
+    justify-content: space-between; */
+
+}
+footer a, footer p {
+    color: var(--blanc);
+    text-decoration: none;
+}
+.instaDesktop {
+    flex-direction: row;
+    align-items: center;
+    gap: 1em;
+}
+footer .social-media {
+    width: 30px;
+    height: 30px;
 }
