--- a/PAC1/src/style.css
+++ b/PAC1/src/style.css
@@ -1,19 +1,22 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: var(--tipografia);
 }
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-html {
+
+html, body {
     height: 100%;
-    scroll-behavior: smooth;
     max-width: 100%;
     overflow-x: hidden;
+    scroll-behavior: smooth;
+    display: flex;
+    flex-direction: column;
 }
+main {
+    flex: 1; 
+}
+
 /* --------------------------------------------------------- */
 /* ------roots--------------------------------------------- */
 /* ------------------------------------------------------- */
@@ -26,34 +29,24 @@ html {
     --beix: rgb(242, 242, 230);
 }
 
-/* ------------------------- */
-/* ---------menu----------- */
-/* ------------------------- */
+/* --------- menu --------- */
 .menu {
     background-color: var(--wine-menu);
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /*     flex-direction: row;
-    justify-content: space-between; */
-    align-items: center;
-    padding-block: 1em;
-    /*     position: sticky;
     position: fixed;
     top: 0;
-    right: 0;
     left: 0;
-    z-index: 999; */
+    z-index: 1000;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em;
 }
 
-/* logo */
+/* Logo */
 .logo-menu {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    width: 100%;
 }
 
 .logo-menu img {
@@ -61,25 +54,50 @@ html {
     height: auto;
 }
 
-/* enllaços */
-.links-menu {
+/* -------- Hamburguesa i menú -------- */
+.menu-toggle {
+    font-size: 1.5rem;
+    color: var(--blanc);
+    cursor: pointer;
+}
+
+.menu-toggle .fa-xmark {
     display: none;
 }
 
-/* .links-menu {
-    display: flex;
+.links-menu {
+    display: none;
     flex-direction: column;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 100%;
+    background-color: var(--wine-menu);
+    padding: 1em;
+    text-align: center;
+    transition: all 0.3s ease-in-out;
     list-style: none;
 }
 
-.links-menu a {
+.links-menu li a {
     color: var(--blanc);
     text-decoration: none;
+    line-height: 3em;
+
 }
 
-.links-menu a:hover {
-    color: var(--negre);
-} */
+.links-menu.active {
+    display: flex;
+}
+
+/* canvi d'incona*/
+.menu.open .fa-bars {
+    display: none;
+}
+
+.menu.open .fa-xmark {
+    display: inline;
+}
 
 /* ------------------------- */
 /* -----principal-img------ */
@@ -109,8 +127,10 @@ html {
     align-items: center;
     justify-content: center;
 }
+
 .contenidor a {
-    color: var(--negre);
+    color: var(--blanc);
+    text-shadow: 5px 5px 5px black;
     margin: 1.5em;
     padding: 1em;
     width: 85%;
@@ -120,17 +140,56 @@ html {
     align-items: center;
     justify-content: center;
     text-decoration: none;
+    position: relative;
 }
-.contenidor div {
+
+.contenidor a::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4); 
+    z-index: 1;
+}
+
+.contenidor a div {
+    position: relative;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.contenidor img {
-    width: 100%;
+.titol {
+    font-size: 30px;
+    text-align: center;
+    color: var(--blanc);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
+
+.first, .second, .third {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 40vh;
+}
+
+/* Assignació d'imatges */
+.first {
+    background-image: url('/img/cata-vins.jpg');
+}
+
+.second {
+    background-image: url('/img/vinya_raim.jpg');
+}
+
+.third {
+    background-image: url('/img/vinya.jpg');
+}
+
 
 /* ------------------------- */
 /* ---------footer----------- */
