--- a/PAC1/src/style.css
+++ b/PAC1/src/style.css
@@ -94,6 +94,7 @@ main {
 /* -----principal-img------ */
 /* ----------------------- */
 .principal-img {
+    padding-top: 4em;
     background-image: url('/img/copa-vi-fons-home.jpg');
     background-size: cover;
     background-position: center;
@@ -111,6 +112,7 @@ main {
 /* -----reserva-img----- */
 /* ----------------------- */
 .reserva-img {
+    padding-top: 4em;
     background-image: url('/img/vinya_fons_reserva.jpg');
     background-size: cover;
     background-position: center;
@@ -128,7 +130,26 @@ main {
 /* -----experiencies-img----- */
 /* ----------------------- */
 .experiencies-img {
+    padding-top: 4em;
     background-image: url('/img/vinya_fons_experiencies.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: var(--blanc);
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-shadow: 5px 5px 5px black;
+}
+/* ------------------------- */
+/* -----quiSom-img------ */
+/* ----------------------- */
+.quiSom-img {
+    padding-top: 4em;
+    background-image: url('/img/vinya_fons_quiSom.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -268,7 +289,7 @@ label {
     min-height: 50vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    align-items: center;
     padding: 1rem;
     margin: 1rem;
     border: 1px solid #ddd;
@@ -303,6 +324,23 @@ input[type="submit"] {
 }
 input[type="submit"]:hover {
     background-color: var(--boto-hover);
+}
+/* ------------------------- */
+/* ---------quiSom----------- */
+/* ------------------------- */
+.quiSomTxt {
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    padding: 1rem;
+    margin: 1rem;
+    text-align: justify;
+}
+.quiSomTxt img {
+    width: 100%; 
+    height: 300px; 
+    object-fit: cover; 
 }
 /* ------------------------- */
 /* ---------footer----------- */
