--- a/PAC1/src/style.css
+++ b/PAC1/src/style.css
@@ -289,7 +289,7 @@ a {
     padding-inline: 1em;
     padding-top: 1em;
 }
-fieldset {
+form {
     width: 85%;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -300,10 +300,11 @@ fieldset {
     margin: 1em;
     align-items: center;
 }
-form {
+fieldset {
     width: 85%;
     display: flex;
     flex-direction: column;
+    border: none;
 }
 .title-form {
     text-align: center;
@@ -382,7 +383,7 @@ input[type="submit"]:hover, .boto:hover {
     color: var(--blanc);
 }
 /* ------------------------- */
-/* ---------pack1----------- */
+/* ---------pack1 i 2----------- */
 /* ------------------------- */
 .pack-txt {
     display: flex;
@@ -443,9 +444,7 @@ iframe {
     text-decoration: underline;
 }
 
-/* ------------------------- */
-/* ---------pack2----------- */
-/* ------------------------- */
+
 /* ------------------------- */
 /* ---------quiSom----------- */
 /* ------------------------- */
@@ -464,7 +463,7 @@ iframe {
     object-fit: cover; 
 }
 /* ------------------------- */
-/* ---------link-div----------- */
+/* ---------enllaços----------- */
 /* ------------------------- */
 .link-div {
     min-height: 50vh;
@@ -482,7 +481,7 @@ iframe {
 .link-div a {
     color: var(--wine);
 }
-.link-div li {
+.link-div ul {
     width: 80%;
     
 }
