--- a/PAC1/src/style.css
+++ b/PAC1/src/style.css
@@ -275,13 +275,6 @@ a {
 /* ------------------------- */
 /* -------reserva---------- */
 /* ----------------------- */
-.reserva-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1em;
-    padding-bottom: 3em;
-}
 .intro-text {
     font-size: 18px;
     text-align: center;
@@ -289,8 +282,14 @@ a {
     padding-inline: 1em;
     padding-top: 1em;
 }
+.reserva-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 3em;
+}
 form {
-    width: 85%;
+    width: 90%;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -301,7 +300,7 @@ form {
     align-items: center;
 }
 fieldset {
-    width: 85%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     border: none;
@@ -316,6 +315,8 @@ input[type="text"], input[type="number"], input[type="date"], input[type="email"
     height: 3rem;
     padding: 8px;
     font-size: 16px;
+    width: 100%;
+    margin: 0.5em;
 }
 legend, label {
     font-size: 20px;
@@ -331,8 +332,8 @@ label {
 }
 .reserva-form input[type="submit"] {
     margin-bottom: 1em;
-    
 }
+
 
 /* ------------------------- */
 /* -----experiències------ */
@@ -542,7 +543,7 @@ footer a, footer p {
         width: 50%;
         text-align: center;
     }
-    .reserva-form fieldset {
+    .reserva-form form {
         width: 50%;
     }
     /* experiències */
