--- a/PAC1/src/style.css
+++ b/PAC1/src/style.css
@@ -114,6 +114,17 @@ a {
     text-align: center;
     text-shadow: 5px 5px 5px var(--negre);
 }
+#section-hero h1, #section-hero p {
+    opacity: 0;
+    transform: translateY(20px);
+    animation: titleAppears 1.5s ease-out forwards;
+}
+@keyframes titleAppears {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 /* ------------------------- */
 /* -----principal-img------ */
 /* ----------------------- */
@@ -159,6 +170,9 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    opacity: 0;
+    transform: translateY(20px);
+    animation: titleAppears 1.5s ease-out forwards;
 }
 .contenidor .first, .contenidor .second, .contenidor .third {
     color: var(--blanc);
@@ -210,7 +224,6 @@ a {
     background-position: center;
     background-repeat: no-repeat;
     height: 40vh;
-
     filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.8));
 }
 .first {
@@ -227,7 +240,8 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 2em; 
+    padding-bottom: 2em; 
+    animation: titleAppears 1.5s ease-out forwards;
 }
 .copa-vi {
     display: inline-block;
@@ -247,6 +261,7 @@ a {
     justify-content: center;
     padding-bottom: 4em;
     gap: 1em;
+    animation: titleAppears 1.5s ease-out forwards;
 }
 .grapes_svg img {
     animation: rotation_grapes 10s linear infinite;
@@ -258,6 +273,13 @@ a {
     }
     to {
         transform: rotate(360deg);
+    }
+}
+
+@keyframes titleAppears {
+    to {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
 
@@ -407,9 +429,6 @@ input[type="submit"]:hover, .boto:hover {
 iframe {
     width: 100%;
 }
-/* .pack1-foto img {
-    clip-path: circle(50% at 50% 50%);
-} */
 
 .pack-txt img {
     width: 100%;
@@ -576,12 +595,6 @@ footer a, footer p {
         width: 90%;
     }
     
-/*     .pack-txt img,
-    iframe {
-        width: 90%;
-        height: 300px;
-        object-fit: cover;
-    } */
     
     .pack-txt form {
         width: 90%;
@@ -683,11 +696,6 @@ footer a, footer p {
     .pack-txt div {
         width: 70%;
     }
-/*     .pack-txt img, iframe {
-        width: 60%;
-        height: 350px;
-        object-fit: cover; 
-    } */
     .pack-txt form {
         width: 70%;
         text-align: center;
