--- a/PAC1/src/style.css
+++ b/PAC1/src/style.css
@@ -635,7 +635,21 @@ footer a, footer p {
     
 }
 /* ------------------------- */
-/* ------responsive pc----- */
+/* ------responsive pc-mitjà----- */
+/* ------------------------- */
+@media (min-width: 1280px) {
+    .contenidor-tablet {
+        padding-block: 5em;
+        width: 60%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 2em;
+    }
+}
+/* ------------------------- */
+/* ------responsive pc-gran----- */
 /* ------------------------- */
 @media (min-width: 992px) {
 /* -----principal-img------ */
@@ -666,15 +680,6 @@ footer a, footer p {
     .titol{
         padding-bottom: 1em;
         text-align: center;
-    }
-    .contenidor-tablet {
-        padding-block: 5em;
-        width: 60%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        gap: 2em;
     }
     .contenidor a {
         margin: 1.5em;
