--- a/PAC1/src/style.css
+++ b/PAC1/src/style.css
@@ -161,57 +161,67 @@ a {
 .pack2-img {
     background-image: url('/img/img_op/copa_vi_fons_pack2-480.webp');
 }
-/* ------------------------- */
-/* ---------index----------- */
-/* ------------------------- */
 .contenidor {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    opacity: 0;
-    transform: translateY(20px);
-    animation: titleAppears 1.5s ease-out forwards;
 }
-.contenidor .first, .contenidor .second, .contenidor .third {
-    color: var(--blanc);
-    text-shadow: 5px 5px 5px var(--negre);
-    margin: 1.5em;
-    padding: 1em;
-    width: 85%;
-    box-shadow: 1px 1px 5px gray;
+
+.contenidor-tablet {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    text-align: center;
+}
+
+.card {
     position: relative;
+    width: 85%;
+    height: 40vh;
+    margin: 1.5em;
+    box-shadow: 1px 1px 5px gray;
+    text-decoration: none;
+    color: var(--blanc);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.8));
+}
+
+.img-container {
+    position: absolute;
+    inset: 0;
+    z-index: 1;
+}
+
+.img-container::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.4); 
     z-index: 2;
 }
 
-.contenidor .first::before, .contenidor .second::before, .contenidor .third::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
+.img-container img {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.4); 
-    z-index: 1;
+    object-fit: cover;
+    display: block;
 }
-.contenidor a div {
+
+.text {
     position: relative;
-    z-index: 2;
+    z-index: 3;
+    padding: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-.contenidor div p:last-of-type {
-    font-size: 14px;
-}
+
 .titol {
     font-size: 30px;
     text-align: center;
@@ -219,21 +229,9 @@ a {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
     font-family: var(--tipografia-titol);
 }
-.first, .second, .third {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 40vh;
-    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.8));
-}
-.first {
-    background-image: url('/img//img_op/cata-vins-500.webp');
-}
-.second {
-    background-image: url('/img//img_op/vinya_raim-500.webp');
-}
-.third {
-    background-image: url('/img/img_op/vinya-500.webp');
+
+.text p:last-of-type {
+    font-size: 14px;
 }
 
 .copa-vi-div {
